Closed
Bug 820222
Opened 13 years ago
Closed 13 years ago
dom/time/TimeChangeObserver.cpp:16:26: error: expected namespace name
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
Details
Attachments
(1 file)
967 bytes,
patch
|
justin.lebar+bug
:
review+
|
Details | Diff | Splinter Review |
clang++ -o TimeChangeObserver.o -c -I../../dist/stl_wrappers -I../../dist/system_wrappers -include config/gcc_hidden.h -D_IMPL_NS_LAYOUT -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -DEXCLUDE_SKIA_DEPENDENCIES -DOS_POSIX=1 -DOS_LINUX=1 -Idom/base -Idom/battery -Idom/encoding -Idom/file -Idom/power -Idom/media -Idom/network/src -Idom/settings -Idom/phonenumberutils -Idom/sms/src -Idom/contacts -Idom/permission -Idom/alarm -Idom/src/events -Idom/src/storage -Idom/src/offline -Idom/src/geolocation -Idom/src/notification -Idom/workers -Idom/time -Icontent/xbl/src -Icontent/xul/document/src -Icontent/events/src -Icontent/base/src -Icontent/html/content/src -Icontent/html/document/src -Icontent/media/webaudio -Icontent/svg/content/src -Ilayout/generic -Ilayout/style -Ilayout/xul/base/src -Ilayout/xul/base/src/tree/src -Idom/camera -Iipc/chromium/src -Iipc/glue -I../../ipc/ipdl/_ipdlheaders -Idom/time -I. -I../../dist/include -I/OBJDIRdist/include/nspr -I/OBJDIRdist/include/nss -fPIC -Qunused-arguments -Qunused-arguments -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wno-c++0x-extensions -Wno-unknown-warning-option -Wno-return-type-c-linkage -Wno-mismatched-tags -Wno-long-long -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -std=gnu++0x -pthread -pipe -DDEBUG -D_DEBUG -DTRACING -g -fno-omit-frame-pointer -Qunused-arguments -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/TimeChangeObserver.o.pp dom/time/TimeChangeObserver.cpp
dom/time/TimeChangeObserver.cpp:16:26: error: expected namespace name
using namespace mozilla::services;
~~~~~~~~~^
dom/time/TimeChangeObserver.cpp:68:50: error: use of undeclared identifier 'GetObserverService'; did you mean 'nsIObserverService'?
nsCOMPtr<nsIObserverService> observerService = GetObserverService();
^
2 errors generated.
make[1]: *** [TimeChangeObserver.o] Error 1
Assignee | ||
Comment 1•13 years ago
|
||
One-liner to fix compilation error...
Attachment #690658 -
Flags: review?(justin.lebar+bug)
Updated•13 years ago
|
Attachment #690658 -
Flags: review?(justin.lebar+bug) → review+
Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•