Bug 820222 - Fix unknown namespace mozilla::services compilation error.  r=jlebar